WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224494
The watchdog should not fire when it's not active.
https://bugs.webkit.org/show_bug.cgi?id=224494
Summary
The watchdog should not fire when it's not active.
Mark Lam
Reported
2021-04-13 11:12:26 PDT
This is needed because JSValue::toWTFStringSlowCase() can throw exceptions and do many other VM operations.
rdar://76581259
Attachments
proposed patch.
(1.82 KB, patch)
2021-04-13 11:16 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
proposed patch.
(1.95 KB, patch)
2021-04-13 11:20 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
proposed patch.
(2.55 KB, patch)
2021-04-13 14:57 PDT
,
Mark Lam
saam
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2021-04-13 11:16:23 PDT
Created
attachment 425886
[details]
proposed patch.
Mark Lam
Comment 2
2021-04-13 11:20:22 PDT
Created
attachment 425887
[details]
proposed patch.
Mark Lam
Comment 3
2021-04-13 14:57:09 PDT
Created
attachment 425919
[details]
proposed patch.
Yusuke Suzuki
Comment 4
2021-04-13 15:04:14 PDT
Comment on
attachment 425919
[details]
proposed patch. r=me too.
Mark Lam
Comment 5
2021-04-13 19:17:08 PDT
The mac-AS-debug-wk2 failure is unrelated.
Mark Lam
Comment 6
2021-04-13 19:20:14 PDT
Thanks for the reviews. Landed in
r275924
: <
http://trac.webkit.org/r275924
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug