Source/JavaScriptCore/runtime/Watchdog.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2013-2017 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2021 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -49,6 +49,8 @@ public:
     void setTimeLimit(Seconds limit, ShouldTerminateCallback = nullptr, void* data1 = nullptr, void* data2 = nullptr);
 
     bool shouldTerminate(JSGlobalObject*);
+
+    bool isActive() const { return m_hasEnteredVM; }
 
     bool hasTimeLimit();
     void enteredVM();
